--- a/app/src/main/res/layout/webcontent.xml
+++ b/app/src/main/res/layout/webcontent.xml
@@ -1,7 +1,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,14 +9,14 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        >
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <include
             android:id="@+id/toolbar"
-            layout="@layout/tool_bar"
-            />
+            layout="@layout/tool_bar" />
+
         <FrameLayout
             android:id="@+id/frame"
             android:layout_width="match_parent"
@@ -28,30 +28,22 @@
                 android:layout_height="fill_parent" />
 
             <ProgressBar
+                android:id="@+id/progressBar2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/progressBar2"
                 android:layout_gravity="center"
                 android:max="100"
-                android:visibility="invisible"/>
+                android:visibility="invisible" />
+
             <com.google.android.gms.ads.AdView
                 android:id="@+id/adView"
-                android:layout_gravity="center_horizontal|bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|bottom"
                 ads:adSize="BANNER"
                 ads:adUnitId="@string/banner_ad_unit_id" />
         </FrameLayout>
 
     </LinearLayout>
-
-    <android.support.design.widget.NavigationView
-        android:id="@+id/navigation_view"
-        android:layout_height="match_parent"
-        android:layout_width="200dp"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/header"
-        app:menu="@menu/drawer"
-        />
 </android.support.v4.widget.DrawerLayout>
 
